--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,15 +8,15 @@
     "description": "Create, share and discover digital visiting cards",
     "icons": [
         {
-            "src": "/vite.svg",
+            "src": "/logo.png",
             "sizes": "192x192",
-            "type": "image/svg+xml",
+            "type": "image/png",
             "purpose": "any maskable"
         },
         {
-            "src": "/vite.svg",
+            "src": "/logo.png",
             "sizes": "512x512",
-            "type": "image/svg+xml",
+            "type": "image/png",
             "purpose": "any maskable"
         }
     ]
